@@ -1,24 +1,15 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
-import dk.kvalitetsit.hjemmebehandling.api.*;
-import dk.kvalitetsit.hjemmebehandling.model.PlanDefinitionStatus;
-import dk.kvalitetsit.hjemmebehandling.controller.http.LocationHeaderBuilder;
-import dk.kvalitetsit.hjemmebehandling.model.PlanDefinitionModel;
+import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.BadRequestException;
+import dk.kvalitetsit.hjemmebehandling.controller.http.LocationHeaderBuilder;
 import dk.kvalitetsit.hjemmebehandling.fhir.FhirUtils;
+import dk.kvalitetsit.hjemmebehandling.model.PlanDefinitionModel;
 import dk.kvalitetsit.hjemmebehandling.model.ThresholdModel;
 import dk.kvalitetsit.hjemmebehandling.service.PlanDefinitionService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.headers.Header;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
-
 import org.hl7.fhir.r4.model.ResourceType;
 import org.openapitools.api.PlanDefinitionApi;
 import org.openapitools.model.CreatePlanDefinitionRequest;
@@ -28,16 +19,17 @@ import org.openapitools.model.ThresholdDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.net.URI;
 import java.time.OffsetDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 @RestController
-@Tag(name = "PlanDefinition", description = "API for manipulating and retrieving PlanDefinitions.")
 public class PlanDefinitionController extends BaseController implements PlanDefinitionApi {
     private static final Logger logger = LoggerFactory.getLogger(PlanDefinitionController.class);
 
@@ -51,21 +43,6 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
         this.locationHeaderBuilder = locationHeaderBuilder;
     }
 
-    private List<String> getQuestionnaireIds(List<String> questionnaireIds) {
-        return collectionToStream(questionnaireIds)
-            .map(id -> FhirUtils.qualifyId(id, ResourceType.Questionnaire))
-            .collect(Collectors.toList());
-    }
-
-    private List<ThresholdModel> getThresholds(List<ThresholdDto> thresholdDtos) {
-        return collectionToStream(thresholdDtos)
-            .map(dtoMapper::mapThresholdDto)
-            .collect(Collectors.toList());
-    }
-
-    private <T> Stream<T> collectionToStream(Collection<T> collection) {
-        return Optional.ofNullable(collection).stream().flatMap(Collection::stream);
-    }
 
     @Override
     public ResponseEntity<Void> createPlanDefinition(CreatePlanDefinitionRequest createPlanDefinitionRequest) {
@@ -73,8 +50,7 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
         try {
             PlanDefinitionModel planDefinition = dtoMapper.mapPlanDefinitionDto(createPlanDefinitionRequest.getPlanDefinition());
             planDefinitionId = planDefinitionService.createPlanDefinition(planDefinition);
-        }
-        catch(AccessValidationException | ServiceException e) {
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Error creating PlanDefinition", e);
             throw toStatusCodeException(e);
         }
@@ -84,23 +60,18 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
     }
 
     @Override
-    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions(List<String> statusesToInclude) {
+    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions(Optional<List<String>> statusesToInclude) {
         try {
-
-            if( statusesToInclude != null &&  statusesToInclude.isEmpty()){
+            if (statusesToInclude.isPresent() && statusesToInclude.get().isEmpty()) {
                 var details = ErrorDetails.PARAMETERS_INCOMPLETE;
                 details.setDetails("Statusliste blev sendt med, men indeholder ingen elementer");
                 throw new BadRequestException(details);
             }
 
-            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(statusesToInclude);
+            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(statusesToInclude.orElse(List.of()));
 
-            return ResponseEntity.ok(planDefinitions.stream()
-                    .map(dtoMapper::mapPlanDefinitionModel)
-                    .sorted(Comparator.comparing(PlanDefinitionDto::getLastUpdated, Comparator.nullsFirst(OffsetDateTime::compareTo).reversed()))
-                    .collect(Collectors.toList()));
-        }
-        catch(ServiceException e) {
+            return ResponseEntity.ok(planDefinitions.stream().map(dtoMapper::mapPlanDefinitionModel).sorted(Comparator.comparing((x) -> x.getLastUpdated().orElse(null), Comparator.nullsFirst(OffsetDateTime::compareTo).reversed())).toList());
+        } catch (ServiceException e) {
             logger.error("Could not look up plandefinitions", e);
             throw toStatusCodeException(e);
         }
@@ -111,8 +82,7 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
         boolean isPlanDefinitionInUse;
         try {
             isPlanDefinitionInUse = !planDefinitionService.getCarePlansThatIncludes(id).isEmpty();
-        }
-        catch(ServiceException se) {
+        } catch (ServiceException se) {
             throw toStatusCodeException(se);
         }
         return ResponseEntity.ok().body(isPlanDefinitionInUse);
@@ -125,11 +95,11 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
             String name = request.getName();
             List<String> questionnaireIds = getQuestionnaireIds(request.getQuestionnaireIds());
             List<ThresholdModel> thresholds = getThresholds(request.getThresholds());
-            PatchPlanDefinitionRequest.StatusEnum status = request.getStatus();
 
-            planDefinitionService.updatePlanDefinition(id, name, dtoMapper.mapPlanDefinitionStatusDto(status), questionnaireIds, thresholds);
-        }
-        catch(Exception e) {
+            var status = dtoMapper.mapPlanDefinitionStatusDto(request.getStatus());
+
+            planDefinitionService.updatePlanDefinition(id, name, status, questionnaireIds, thresholds);
+        } catch (Exception e) {
             throw toStatusCodeException(e);
         }
         return ResponseEntity.ok().build();
@@ -139,8 +109,7 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
     public ResponseEntity<Void> retirePlanDefinition(String id) {
         try {
             planDefinitionService.retirePlanDefinition(id);
-        }
-        catch(ServiceException se) {
+        } catch (ServiceException se) {
             throw toStatusCodeException(se);
         }
 
@@ -153,11 +122,17 @@ public class PlanDefinitionController extends BaseController implements PlanDefi
     }
 
 
+    private List<String> getQuestionnaireIds(List<String> questionnaireIds) {
+        return collectionToStream(questionnaireIds).map(id -> FhirUtils.qualifyId(id, ResourceType.Questionnaire)).toList();
+    }
 
+    private List<ThresholdModel> getThresholds(List<ThresholdDto> thresholdDtos) {
+        return collectionToStream(thresholdDtos).map(dtoMapper::mapThresholdDto).toList();
+    }
 
-
-
-
+    private <T> Stream<T> collectionToStream(Collection<T> collection) {
+        return Optional.ofNullable(collection).stream().flatMap(Collection::stream);
+    }
 
 
 }
