@@ -1,7 +1,6 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
-import dk.kvalitetsit.hjemmebehandling.api.*;
-
+import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.BadRequestException;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.ResourceNotFoundException;
@@ -13,7 +12,6 @@ import dk.kvalitetsit.hjemmebehandling.service.AuditLoggingService;
 import dk.kvalitetsit.hjemmebehandling.service.QuestionnaireService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import org.hl7.fhir.r4.model.ResourceType;
 import org.openapitools.api.QuestionnaireApi;
 import org.openapitools.model.CreateQuestionnaireRequest;
@@ -28,22 +26,18 @@ import org.springframework.web.bind.annotation.RestController;
 import java.net.URI;
 import java.time.OffsetDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
-@Tag(name = "Questionnaire", description = "API for manipulating and retrieving Questionnaires.")
-public class QuestionnaireController extends BaseController implements QuestionnaireApi  {
+public class QuestionnaireController extends BaseController implements QuestionnaireApi {
     private static final Logger logger = LoggerFactory.getLogger(QuestionnaireController.class);
 
     private final QuestionnaireService questionnaireService;
-    private AuditLoggingService auditLoggingService;
     private final DtoMapper dtoMapper;
     private final LocationHeaderBuilder locationHeaderBuilder;
 
     public QuestionnaireController(QuestionnaireService questionnaireService, AuditLoggingService auditLoggingService, DtoMapper dtoMapper, LocationHeaderBuilder locationHeaderBuilder) {
         this.questionnaireService = questionnaireService;
-        this.auditLoggingService = auditLoggingService;
         this.dtoMapper = dtoMapper;
         this.locationHeaderBuilder = locationHeaderBuilder;
     }
@@ -57,7 +51,7 @@ public class QuestionnaireController extends BaseController implements Questionn
             String questionnaireId = questionnaireService.createQuestionnaire(questionnaire);
             URI location = locationHeaderBuilder.buildLocationHeader(questionnaireId);
             return ResponseEntity.created(location).build();
-        }catch (ServiceException e) {
+        } catch (ServiceException e) {
             logger.error("Could not create questionnaire");
             throw toStatusCodeException(e);
         }
@@ -71,35 +65,32 @@ public class QuestionnaireController extends BaseController implements Questionn
         try {
             String questionnaireId = FhirUtils.qualifyId(id, ResourceType.Questionnaire);
             questionnaire = questionnaireService.getQuestionnaireById(questionnaireId);
-        }
-        catch(AccessValidationException | ServiceException e) {
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not update questionnaire response", e);
             throw toStatusCodeException(e);
         }
 
-        if(questionnaire.isEmpty()) {
+        if (questionnaire.isEmpty()) {
             throw new ResourceNotFoundException(String.format("Questionnaire with id %s not found.", id), ErrorDetails.QUESTIONNAIRE_DOES_NOT_EXIST);
         }
         return ResponseEntity.ok(dtoMapper.mapQuestionnaireModel(questionnaire.get()));
     }
 
     @Override
-    public ResponseEntity<List<QuestionnaireDto>> getQuestionnaires(List<String> statusesToInclude) {
+    public ResponseEntity<List<QuestionnaireDto>> getQuestionnaires(Optional<List<String>> statusesToInclude) {
 
-        if( !statusesToInclude.isEmpty()){
+        if (statusesToInclude.isPresent() && statusesToInclude.get().isEmpty()) {
             var details = ErrorDetails.PARAMETERS_INCOMPLETE;
             details.setDetails("Statusliste blev sendt med, men indeholder ingen elementer");
             throw new BadRequestException(details);
         }
         try {
+            List<QuestionnaireModel> questionnaires = questionnaireService.getQuestionnaires(statusesToInclude.orElse(List.of()));
 
-            List<QuestionnaireModel> questionnaires = questionnaireService.getQuestionnaires(statusesToInclude);
+            return ResponseEntity.ok(questionnaires.stream().map(dtoMapper::mapQuestionnaireModel).sorted(Comparator.comparing(x -> x.getLastUpdated().orElse(null), Comparator.nullsFirst(OffsetDateTime::compareTo).reversed())).toList());
 
-            return ResponseEntity.ok(questionnaires.stream()
-                    .map(dtoMapper::mapQuestionnaireModel)
-                    .sorted(Comparator.comparing(QuestionnaireDto::getLastUpdated, Comparator.nullsFirst(OffsetDateTime::compareTo).reversed()))
-                    .collect(Collectors.toList()));
-        }catch (ServiceException e){
+
+        } catch (ServiceException e) {
             throw toStatusCodeException(e);
         }
     }
@@ -110,8 +101,7 @@ public class QuestionnaireController extends BaseController implements Questionn
         boolean isQuestionnaireInUse;
         try {
             isQuestionnaireInUse = !questionnaireService.getPlanDefinitionsThatIncludes(id).isEmpty();
-        }
-        catch(ServiceException se) {
+        } catch (ServiceException se) {
             throw toStatusCodeException(se);
         }
 
@@ -126,18 +116,15 @@ public class QuestionnaireController extends BaseController implements Questionn
         try {
             String questionnaireId = FhirUtils.qualifyId(id, ResourceType.Questionnaire);
 
-            List<QuestionModel> questions = collectionToStream(patchQuestionnaireRequest.getQuestions())
-                    .map(dtoMapper::mapQuestionDto)
-                    .collect(Collectors.toList());
+            List<QuestionModel> questions = collectionToStream(patchQuestionnaireRequest.getQuestions()).map(dtoMapper::mapQuestionDto).toList();
 
             QuestionModel callToAction = dtoMapper.mapQuestionDto(patchQuestionnaireRequest.getCallToAction());
 
             questionnaireService.updateQuestionnaire(questionnaireId, patchQuestionnaireRequest.getTitle(), patchQuestionnaireRequest.getDescription(), patchQuestionnaireRequest.getStatus(), questions, callToAction);
-
             return ResponseEntity.ok().build();
 
-        }
-        catch(AccessValidationException | ServiceException e) {
+
+        } catch (AccessValidationException | ServiceException e) {
             throw toStatusCodeException(e);
         }
     }
@@ -146,8 +133,7 @@ public class QuestionnaireController extends BaseController implements Questionn
     public ResponseEntity<Void> retireQuestionnaire(String id) {
         try {
             questionnaireService.retireQuestionnaire(id);
-        }
-        catch(ServiceException se) {
+        } catch (ServiceException se) {
             throw toStatusCodeException(se);
         }
 
@@ -160,32 +146,37 @@ public class QuestionnaireController extends BaseController implements Questionn
     }
 
 
-
-    private void validateQuestions(List<QuestionDto> questions){
-        if(questions == null || questions.isEmpty()) {
+    private void validateQuestions(List<QuestionDto> questions) {
+        if (questions == null || questions.isEmpty()) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
 
         //All questions should have a unique ID
         List<String> ids = new ArrayList<String>();
-        for (var question : questions){
-            var idIsInList = ids.contains(question.getLinkId());
-            if(idIsInList)
-                throw new BadRequestException(ErrorDetails.QUESTIONS_ID_IS_NOT_UNIQUE);
-            ids.add(question.getLinkId());
+        for (var question : questions) {
 
-            if (question.getQuestionType() == null) {
+            var idIsInList = question.getLinkId().map(ids::contains).orElse(false);
+
+            if (idIsInList) {
+                throw new BadRequestException(ErrorDetails.QUESTIONS_ID_IS_NOT_UNIQUE);
+            }
+
+            question.getLinkId().ifPresent(ids::add);
+
+            if (question.getQuestionType().isEmpty()) {
                 throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
             }
 
-            if (Objects.requireNonNull(question.getQuestionType()) == QuestionDto.QuestionTypeEnum.QUANTITY) {
-                var measurementType = question.getMeasurementType();
-                if (measurementType == null || (measurementType.getCode() == null || measurementType.getDisplay() == null) || measurementType.getSystem() == null) {
+            if (question.getQuestionType().get() == QuestionDto.QuestionTypeEnum.QUANTITY) {
+                // todo: Handle 'Optional.get()' without 'isPresent()' check below
+                var measurementType = question.getMeasurementType().get();
+                if (measurementType.getCode().isEmpty() || measurementType.getDisplay().isEmpty() || measurementType.getSystem().isEmpty()) {
                     throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
                 }
             }
         }
     }
+
     private Stream<QuestionDto> collectionToStream(Collection<QuestionDto> collection) {
         return Optional.ofNullable(collection).stream().flatMap(Collection::stream);
     }
