@@ -1,17 +1,22 @@
 package dk.kvalitetsit.hjemmebehandling.service;
 
-import java.time.Instant;
-import java.time.LocalTime;
-import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
-import dk.kvalitetsit.hjemmebehandling.model.ExaminationStatus;
+import dk.kvalitetsit.hjemmebehandling.client.CustomUserClient;
+import dk.kvalitetsit.hjemmebehandling.constants.Systems;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
+import dk.kvalitetsit.hjemmebehandling.fhir.ExtensionMapper;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirClient;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirLookupResult;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirMapper;
 import dk.kvalitetsit.hjemmebehandling.model.*;
+import dk.kvalitetsit.hjemmebehandling.service.access.AccessValidator;
+import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ErrorKind;
+import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
+import dk.kvalitetsit.hjemmebehandling.service.frequency.FrequencyEnumerator;
+import dk.kvalitetsit.hjemmebehandling.types.Pagination;
+import dk.kvalitetsit.hjemmebehandling.types.Weekday;
+import dk.kvalitetsit.hjemmebehandling.util.DateProvider;
 import org.hl7.fhir.r4.model.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -22,23 +27,15 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-
-import dk.kvalitetsit.hjemmebehandling.client.CustomUserClient;
-import dk.kvalitetsit.hjemmebehandling.constants.Systems;
-import dk.kvalitetsit.hjemmebehandling.fhir.ExtensionMapper;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirClient;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirLookupResult;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirMapper;
-import dk.kvalitetsit.hjemmebehandling.service.access.AccessValidator;
-import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
-import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
-import dk.kvalitetsit.hjemmebehandling.service.frequency.FrequencyEnumerator;
-import dk.kvalitetsit.hjemmebehandling.types.Pagination;
-import dk.kvalitetsit.hjemmebehandling.types.Weekday;
-import dk.kvalitetsit.hjemmebehandling.util.DateProvider;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.test.util.ReflectionTestUtils;
+
+import java.time.Instant;
+import java.time.LocalTime;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -63,7 +60,7 @@ public class CarePlanServiceTest {
 
     @Mock
     private AccessValidator accessValidator;
-    
+
     @Mock
     private CustomUserClient customUserService;
 
@@ -87,7 +84,7 @@ public class CarePlanServiceTest {
     /*
     @Test
     public void createCarePlan_patientExists_patientIsNotCreated() throws Exception {
-        // Arrange
+        
         CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
 
         CarePlan carePlan = new CarePlan();
@@ -102,10 +99,10 @@ public class CarePlanServiceTest {
 
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
 
-        // Act
+        
         String result = subject.createCarePlan(carePlanModel);
 
-        // Assert
+        
         Mockito.verify(fhirClient).saveCarePlan(carePlan);
     }
     */
@@ -117,9 +114,9 @@ public class CarePlanServiceTest {
         ReflectionTestUtils.setField(subject, "patientidpApiUrl", "http://foo");
         Mockito.when(customUserService.createUser(any())).thenThrow(JsonProcessingException.class);
 
-        try{
-            // Arrange
-            CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+        try {
+
+            CarePlanModel carePlanModel = buildCarePlanModel();
 
             CarePlan carePlan = new CarePlan();
             Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
@@ -136,19 +133,19 @@ public class CarePlanServiceTest {
 
             Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
 
-            // Act
+
             String result = subject.createCarePlan(carePlanModel);
             fail("No error was thrown");
-        } catch (ServiceException e){
-            assertEquals(ErrorDetails.CUSTOMLOGIN_UNKNOWN_ERROR,e.getErrorDetails());
-            assertEquals(ErrorKind.BAD_GATEWAY,e.getErrorKind());
+        } catch (ServiceException e) {
+            assertEquals(ErrorDetails.CUSTOMLOGIN_UNKNOWN_ERROR, e.getErrorDetails());
+            assertEquals(ErrorKind.BAD_GATEWAY, e.getErrorKind());
         }
     }
 
     @Test
     public void createCarePlan_patientDoesNotExist_patientIsCreated() throws Exception {
-        // Arrange
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+
+        CarePlanModel carePlanModel = buildCarePlanModel();
 
         CarePlan carePlan = new CarePlan();
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
@@ -160,17 +157,17 @@ public class CarePlanServiceTest {
 
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
 
-        // Act
+
         String result = subject.createCarePlan(carePlanModel);
 
-        // Assert
+
         Mockito.verify(fhirClient).saveCarePlan(carePlan, patient);
     }
 
     @Test
     public void createCarePlan_activePlanExists_throwsException() throws Exception {
-        // Arrange
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+
+        CarePlanModel carePlanModel = buildCarePlanModel();
 
         Patient patient = new Patient();
         patient.setId(PATIENT_ID_1);
@@ -181,16 +178,14 @@ public class CarePlanServiceTest {
         boolean onlyActiveCarePlans = true;
         Mockito.when(fhirClient.lookupCarePlansByPatientId(PATIENT_ID_1, onlyActiveCarePlans)).thenReturn(lookupResult);
 
-        // Act
 
-        // Assert
         assertThrows(ServiceException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     @Test
     public void createCarePlan_questionnaireAccessViolation_throwsException() throws Exception {
-        // Arrange
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, List.of(), List.of(QUESTIONNAIRE_ID_1));
+
+        CarePlanModel carePlanModel = buildCarePlanModel(List.of(), List.of(QUESTIONNAIRE_ID_1));
 
         Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
 
@@ -200,16 +195,14 @@ public class CarePlanServiceTest {
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(questionnaire));
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     @Test
     public void createCarePlan_planDefinitionAccessViolation_throwsException() throws Exception {
-        // Arrange
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, List.of(PLANDEFINITION_ID_1), List.of());
+
+        CarePlanModel carePlanModel = buildCarePlanModel(List.of(PLANDEFINITION_ID_1), List.of());
 
         Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
 
@@ -219,16 +212,14 @@ public class CarePlanServiceTest {
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(planDefinition));
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     /*
     @Test
     public void createCarePlan_success() throws Exception {
-        // Arrange
+        
         CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
 
         CarePlan carePlan = new CarePlan();
@@ -246,16 +237,16 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
 
-        // Act
+        
         String result = subject.createCarePlan(carePlanModel);
 
-        // Assert
+        
         assertEquals("1", result);
     }
 
     @Test
     public void createCarePlan_persistingFails_throwsException() throws Exception {
-        // Arrange
+        
         CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
 
         CarePlan carePlan = new CarePlan();
@@ -272,15 +263,15 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.saveCarePlan(carePlan)).thenThrow(IllegalStateException.class);
 
-        // Act
+        
 
-        // Assert
+        
         assertThrows(ServiceException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     @Test
     public void createCarePlan_populatesId() throws Exception {
-        // Arrange
+        
         CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
         carePlanModel.setId(new QualifiedId(CAREPLAN_ID_1));
 
@@ -299,17 +290,17 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
 
-        // Act
+        
         String result = subject.createCarePlan(carePlanModel);
 
-        // Assert
+        
         assertNull(carePlanModel.getId());
     }
 
 
     @Test
     public void createCarePlan_populatesSatisfiedUntil() throws Exception {
-        // Arrange
+        
         CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, List.of(PLANDEFINITION_ID_1), List.of(QUESTIONNAIRE_ID_1));
 
         CarePlan carePlan = new CarePlan();
@@ -329,10 +320,10 @@ public class CarePlanServiceTest {
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
 
-        // Act
+        
         String result = subject.createCarePlan(carePlanModel);
 
-        // Assert
+        
         var wrapper = carePlanModel.getQuestionnaires().get(0);
         var expectedPointInTime = new FrequencyEnumerator(wrapper.getFrequency()).getSatisfiedUntilForInitialization(dateProvider.now());
         assertEquals(expectedPointInTime, wrapper.getSatisfiedUntil());
@@ -342,7 +333,7 @@ public class CarePlanServiceTest {
 
     @Test
     public void getCarePlanByCpr_carePlansPresent_returnsCarePlans() throws Exception {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         Patient patient = buildPatient(PATIENT_ID_1, CPR_1);
 
@@ -359,17 +350,17 @@ public class CarePlanServiceTest {
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(CPR_1, onlyActiveCarePlans,onlyUnSatisfied,new Pagination(1,10));
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(CPR_1, onlyActiveCarePlans, onlyUnSatisfied, new Pagination(1, 10));
+
+
         assertEquals(1, result.size());
-        assertEquals(carePlanModel, result.get(0));
+        assertEquals(carePlanModel, result.getFirst());
     }
 
     @Test
     public void getCarePlanByCpr_carePlansMissing_returnsEmptyList() throws Exception {
-        // Arrange
+
         Patient patient = buildPatient(PATIENT_ID_1, CPR_1);
         boolean onlyActiveCarePlans = true;
         boolean onlyUnSatisfied = false;
@@ -378,16 +369,16 @@ public class CarePlanServiceTest {
         Mockito.when(dateProvider.now()).thenReturn(unstaisfiedAt);
         Mockito.when(fhirClient.lookupCarePlans(CPR_1, unstaisfiedAt, onlyActiveCarePlans, onlyUnSatisfied)).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(CPR_1, onlyActiveCarePlans,onlyUnSatisfied,new Pagination(1,10));
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(CPR_1, onlyActiveCarePlans, onlyUnSatisfied, new Pagination(1, 10));
+
+
         assertEquals(0, result.size());
     }
 
     @Test
     public void getCarePlansWithUnsatisfiedSchedules_carePlansPresent_returnsCarePlans() throws Exception {
-        // Arrange
+
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
         int pageNumber = 1;
@@ -399,20 +390,20 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.lookupCarePlans(POINT_IN_TIME, onlyActiveCarePlans, unsatisfied)).thenReturn(lookupResult);
 
         CarePlanModel carePlanModel = new CarePlanModel();
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans,unsatisfied, new Pagination(pageNumber, pageSize));
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(pageNumber, pageSize));
+
+
         assertEquals(1, result.size());
-        assertEquals(carePlanModel, result.get(0));
+        assertEquals(carePlanModel, result.getFirst());
     }
 
     @Test
     public void getCarePlansWithUnsatisfiedSchedules_carePlansMissing_returnsEmptyList() throws Exception {
-        // Arrange
+
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
         int pageNumber = 1;
@@ -421,16 +412,16 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.lookupCarePlans(POINT_IN_TIME, onlyActiveCarePlans, unsatisfied)).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans,unsatisfied, new Pagination(pageNumber, pageSize));
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(pageNumber, pageSize));
+
+
         assertEquals(0, result.size());
     }
 
     @Test
     public void getCarePlansWithUnsatisfiedSchedules_translatesPagingParameters() throws Exception {
-        // Arrange
+
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
         int pageNumber = 3;
@@ -439,10 +430,10 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.lookupCarePlans(POINT_IN_TIME, onlyActiveCarePlans, unsatisfied)).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans,unsatisfied, new Pagination(pageNumber, pageSize));
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(pageNumber, pageSize));
+
+
     }
 
     private static Stream<Arguments> getCarePlansWithUnsatisfiedSchedules_sortCareplans_byPatientName() {
@@ -451,17 +442,18 @@ public class CarePlanServiceTest {
         HumanName b_a = new HumanName().addGiven("b").setFamily("a");
         HumanName b_b = new HumanName().addGiven("b").setFamily("b");
         return Stream.of(
-            //getPointInTime_initializedWithSeed
-            Arguments.of(a_a, a_b, List.of(a_a, a_b)),
-            Arguments.of(a_b, a_a, List.of(a_a, a_b)),
-            Arguments.of(b_a, b_b, List.of(b_a, b_b)),
-            Arguments.of(b_b, b_a, List.of(b_a, b_b))
+                //getPointInTime_initializedWithSeed
+                Arguments.of(a_a, a_b, List.of(a_a, a_b)),
+                Arguments.of(a_b, a_a, List.of(a_a, a_b)),
+                Arguments.of(b_a, b_b, List.of(b_a, b_b)),
+                Arguments.of(b_b, b_a, List.of(b_a, b_b))
         );
     }
+
     @ParameterizedTest
     @MethodSource // arguments comes from a method that is name the same as the test
     public void getCarePlansWithUnsatisfiedSchedules_sortCareplans_byPatientName(HumanName name1, HumanName name2, List<HumanName> expectedOrder) throws Exception {
-        // Arrange
+
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
         int pageNumber = 1;
@@ -478,17 +470,17 @@ public class CarePlanServiceTest {
 
         CarePlanModel carePlanModel1 = new CarePlanModel();
         CarePlanModel carePlanModel2 = new CarePlanModel();
-        carePlanModel1.setPatient( buildPatientModel(PATIENT_ID_1, name1.getGivenAsSingleString(), name1.getFamily()) );
-        carePlanModel2.setPatient( buildPatientModel(PATIENT_ID_2, name2.getGivenAsSingleString(), name2.getFamily()) );
+        carePlanModel1.setPatient(buildPatientModel(PATIENT_ID_1, name1.getGivenAsSingleString(), name1.getFamily()));
+        carePlanModel2.setPatient(buildPatientModel(PATIENT_ID_2, name2.getGivenAsSingleString(), name2.getFamily()));
 
-        Mockito.when(fhirMapper.mapCarePlan(carePlan1, lookupResult,ORGANISATION_ID_1)).thenReturn(carePlanModel1);
-        Mockito.when(fhirMapper.mapCarePlan(carePlan2, lookupResult,ORGANISATION_ID_2)).thenReturn(carePlanModel2);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan1, lookupResult, ORGANISATION_ID_1)).thenReturn(carePlanModel1);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan2, lookupResult, ORGANISATION_ID_2)).thenReturn(carePlanModel2);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans,unsatisfied);
 
-        // Assert
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied);
+
+
         assertEquals(2, result.size());
         assertEquals(expectedOrder.get(0).getGivenAsSingleString(), result.get(0).getPatient().getGivenName());
         assertEquals(expectedOrder.get(0).getFamily(), result.get(0).getPatient().getFamilyName());
@@ -498,7 +490,7 @@ public class CarePlanServiceTest {
 
     @Test
     public void getCarePlanById_carePlanPresent_returnsCarePlan() throws Exception {
-        // Arrange
+
         String carePlanId = "CarePlan/careplan-1";
         String patientId = "Patient/patient-1";
 
@@ -507,16 +499,16 @@ public class CarePlanServiceTest {
 
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         Optional<CarePlanModel> result = subject.getCarePlanById(carePlanId);
 
-        // Assert
+
         assertEquals(carePlanModel, result.get());
     }
 
     @Test
     public void getCarePlanById_carePlanForDifferentOrganization_throwsException() throws Exception {
-        // Arrange
+
         String carePlanId = "CarePlan/careplan-1";
         String patientId = "Patient/patient-1";
 
@@ -525,54 +517,48 @@ public class CarePlanServiceTest {
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.getCarePlanById(carePlanId));
     }
 
     @Test
     public void getCarePlanById_carePlanMissing_returnsEmpty() throws Exception {
-        // Arrange
+
         String carePlanId = CAREPLAN_ID_1;
 
         Mockito.when(fhirClient.lookupCarePlanById(carePlanId)).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
+
         Optional<CarePlanModel> result = subject.getCarePlanById(carePlanId);
 
-        // Assert
+
         assertFalse(result.isPresent());
     }
 
     @Test
     public void resolveAlarm_carePlanMissing_throwsException() throws ServiceException {
-        // Arrange
+
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
 
-        // Assert
         assertThrows(ServiceException.class, () -> subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1));
     }
 
     @Test
     public void resolveAlarm_accessViolation_throwsException() throws Exception {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(FhirLookupResult.fromResources(carePlan));
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1));
     }
 
     @Test
     public void resolveAlarm_carePlanSatisfiedIntoTheFuture_throwsException() throws Exception {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(lookupResult);
@@ -584,15 +570,13 @@ public class CarePlanServiceTest {
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
-        // Act
 
-        // Assert
         assertThrows(ServiceException.class, () -> subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1));
     }
 
     @Test
     public void resolveAlarm_recomputesSatisfiedUntil_savesCarePlan() throws Exception {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(lookupResult);
@@ -603,17 +587,17 @@ public class CarePlanServiceTest {
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_1, POINT_IN_TIME.minusSeconds(100)),
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_2, POINT_IN_TIME.plusSeconds(100))
         ));
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1);
 
-        // Assert
+
         // Verify that the first questionnaire has its satisfied-timestamp pushed to the next scheduled weekday,
         // the second questionnaire has its timestamp left untouched, and the careplan has its timestamp set to
         // the earliest timestamp (now that of the second questionnaire).
@@ -626,15 +610,15 @@ public class CarePlanServiceTest {
 
     @Test
     public void completeCareplan_NoQuestionnaireResponses_and_satisfiedSchedule_ShouldBeCompleted() throws ServiceException {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult careplanResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(careplanResult);
 
         FhirLookupResult questionnaireResponsesResult = FhirLookupResult.fromResources();
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
 
-        carePlan.setExtension( List.of(ExtensionMapper.mapCarePlanSatisfiedUntil(Instant.now().plus(1, ChronoUnit.DAYS))) );
+        carePlan.setExtension(List.of(ExtensionMapper.mapCarePlanSatisfiedUntil(Instant.now().plus(1, ChronoUnit.DAYS))));
 
         //Action and assert
         assertDoesNotThrow(() -> subject.completeCarePlan(CAREPLAN_ID_1));
@@ -642,49 +626,49 @@ public class CarePlanServiceTest {
 
     @Test
     public void completeCareplan_OneQuestionnaireResponses_ShouldThrowError() throws ServiceException {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult careplanResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(careplanResult);
 
         FhirLookupResult questionnaireResponsesResult = FhirLookupResult.fromResources(new QuestionnaireResponse());
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
 
         //Action and assert
-        try{
+        try {
             subject.completeCarePlan(CAREPLAN_ID_1);
             fail("Careplan should be failing due to questionnaireresponses on careplan");
-        } catch (ServiceException serviceException){
-            assertEquals(ErrorKind.BAD_REQUEST,serviceException.getErrorKind());
+        } catch (ServiceException serviceException) {
+            assertEquals(ErrorKind.BAD_REQUEST, serviceException.getErrorKind());
             assertEquals(ErrorDetails.CAREPLAN_HAS_UNHANDLED_QUESTIONNAIRERESPONSES, serviceException.getErrorDetails());
         }
     }
 
     @Test
     public void completeCareplan_unsatisfiedSchedule_ShouldThrowError() throws ServiceException {
-        // Arrange
+
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult careplanResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(careplanResult);
 
         FhirLookupResult questionnaireResponsesResult = FhirLookupResult.fromResources();
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), CAREPLAN_ID_1)).thenReturn(questionnaireResponsesResult);
 
-        carePlan.setExtension( List.of(ExtensionMapper.mapCarePlanSatisfiedUntil(Instant.now().minus(1, ChronoUnit.DAYS))) );
+        carePlan.setExtension(List.of(ExtensionMapper.mapCarePlanSatisfiedUntil(Instant.now().minus(1, ChronoUnit.DAYS))));
 
         //Action and assert
-        try{
+        try {
             subject.completeCarePlan(CAREPLAN_ID_1);
             fail("Careplan should be failing due to questionnaireresponses on careplan");
-        } catch (ServiceException serviceException){
-            assertEquals(ErrorKind.BAD_REQUEST,serviceException.getErrorKind());
+        } catch (ServiceException serviceException) {
+            assertEquals(ErrorKind.BAD_REQUEST, serviceException.getErrorKind());
             assertEquals(ErrorDetails.CAREPLAN_IS_MISSING_SCHEDULED_QUESTIONNAIRERESPONSES, serviceException.getErrorDetails());
         }
     }
 
     @Test
     public void updateCarePlan_questionnaireAccessViolation_throwsException() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -703,15 +687,13 @@ public class CarePlanServiceTest {
         Mockito.doNothing().when(accessValidator).validateAccess(List.of(planDefinition));
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(questionnaire));
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails));
     }
 
     @Test
     public void updateCarePlan_carePlanAccessViolation_throwsException() throws Exception {
-        // Arrange
+
         String carePlanId = "CarePlan/careplan-1";
         List<String> planDefinitionIds = List.of();
         List<String> questionnaireIds = List.of();
@@ -729,21 +711,19 @@ public class CarePlanServiceTest {
         Mockito.doNothing().when(accessValidator).validateAccess(List.of());
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
 
-        // Act
 
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails));
     }
 
     @Test
     public void updateCarePlan_transfersThresholdsFromPlanDefinition() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
         Map<String, FrequencyModel> frequencies = Map.of(QUESTIONNAIRE_ID_1, buildFrequencyModel(List.of(Weekday.MON), "07:00"));
         PatientDetails patientDetails = buildPatientDetails();
-        PatientModel patientModel = buildPatientModel(PATIENT_ID_1);
+        PatientModel patientModel = buildPatientModel();
         Questionnaire questionnaire = new Questionnaire();
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, threshold);
@@ -760,7 +740,7 @@ public class CarePlanServiceTest {
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1, QUESTIONNAIRE_ID_1);
         PlanDefinition planDefinition = new PlanDefinition();
         FhirLookupResult planDefinitionResult = FhirLookupResult.fromResource(planDefinition);
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, planDefinitionIds, questionnaireIds);
+        CarePlanModel carePlanModel = buildCarePlanModel(planDefinitionIds, questionnaireIds);
         carePlanModel.setPatient(patientModel);
         FhirLookupResult carePlanResult = FhirLookupResult.fromResources(carePlan, patient, planDefinition);
 
@@ -768,27 +748,27 @@ public class CarePlanServiceTest {
 
         // Mock
         Mockito.when(fhirClient.lookupPlanDefinitionsById(planDefinitionIds)).thenReturn(planDefinitionResult);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
         Mockito.when(fhirMapper.mapPatient(patient, orgId)).thenReturn(patientModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),carePlanId)).thenReturn(FhirLookupResult.fromResources());
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
 
-        // Assert
+
         assertEquals(1, carePlanModel.getQuestionnaires().size());
-        assertEquals(threshold, carePlanModel.getQuestionnaires().get(0).getThresholds().get(0));
+        assertEquals(threshold, carePlanModel.getQuestionnaires().getFirst().getThresholds().getFirst());
     }
 
     @Test
     public void updateCarePlan_updatesPatientDetails() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -801,7 +781,7 @@ public class CarePlanServiceTest {
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, threshold);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
 
         Questionnaire questionnaire = new Questionnaire();
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
@@ -812,22 +792,22 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
 
         var orgId = "";
-        PatientModel patientModel = buildPatientModel(PATIENT_ID_1);
+        PatientModel patientModel = buildPatientModel();
         Mockito.when(fhirMapper.mapPatient(patient, orgId)).thenReturn(patientModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, planDefinitionIds, questionnaireIds);
+        CarePlanModel carePlanModel = buildCarePlanModel(planDefinitionIds, questionnaireIds);
         carePlanModel.setPatient(patientModel);
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),carePlanId)).thenReturn(FhirLookupResult.fromResources());
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
 
-        // Assert
+
         assertEquals(patientDetails.getPatientPrimaryPhone(), patientModel.getContactDetails().getPrimaryPhone());
         assertEquals(patientDetails.getPatientSecondaryPhone(), patientModel.getContactDetails().getSecondaryPhone());
         assertEquals(patientDetails.getPrimaryRelativeName(), patientModel.getPrimaryContact().getName());
@@ -836,7 +816,7 @@ public class CarePlanServiceTest {
 
     @Test
     public void updateCarePlan_updatesFrequency_keepsMaxOf_currentSatistiedUntil_and_newCalculated() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -850,7 +830,7 @@ public class CarePlanServiceTest {
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, threshold);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
 
         Questionnaire questionnaire = new Questionnaire();
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
@@ -860,7 +840,7 @@ public class CarePlanServiceTest {
         FhirLookupResult carePlanResult = FhirLookupResult.fromResources(carePlan, patient, planDefinition);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
 
-        PatientModel patientModel = buildPatientModel(PATIENT_ID_1);
+        PatientModel patientModel = buildPatientModel();
         PrimaryContactModel primaryContactModel = new PrimaryContactModel();
         primaryContactModel.setOrganisation(buildReference().getReference());
 
@@ -868,12 +848,12 @@ public class CarePlanServiceTest {
         patientModel.setPrimaryContact(primaryContactModel);
 
 
-        Mockito.when(fhirMapper.mapPatient(patient,ORGANISATION_ID_1)).thenReturn(patientModel);
+        Mockito.when(fhirMapper.mapPatient(patient, ORGANISATION_ID_1)).thenReturn(patientModel);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, planDefinitionIds, questionnaireIds);
+        CarePlanModel carePlanModel = buildCarePlanModel(planDefinitionIds, questionnaireIds);
         carePlanModel.setId(new QualifiedId(CAREPLAN_ID_1));
         carePlanModel.setPatient(patientModel);
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
@@ -881,25 +861,25 @@ public class CarePlanServiceTest {
         Map<String, FrequencyModel> frequencies = Map.of(QUESTIONNAIRE_ID_1, buildFrequencyModel(List.of(Weekday.MON, Weekday.TUE), "12:00"));
         FrequencyEnumerator fe = new FrequencyEnumerator(frequencies.get(QUESTIONNAIRE_ID_1));
         Instant nextNextSatisfiedUntilTime = fe.getSatisfiedUntilForFrequencyChange(POINT_IN_TIME);
-        Mockito.lenient().when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),carePlanId)).thenReturn(FhirLookupResult.fromResources());
+        Mockito.lenient().when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
 
         Mockito.lenient().when(fhirClient.lookupQuestionnaireResponses(carePlanModel.getId().getId(), List.of("questionnaire-1"))).thenReturn(FhirLookupResult.fromResources());
         //Mockito.doReturn(FhirLookupResult.fromResources()).when(fhirClient).lookupQuestionnaireResponses(CAREPLAN_ID_1, questionnaireIds);
 
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
 
-        // Assert
+
         //assertTrue(nextNextSatisfiedUntilTime.isBefore(POINT_IN_TIME));
-        assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().get(0).getSatisfiedUntil());
+        assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().getFirst().getSatisfiedUntil());
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getSatisfiedUntil());
     }
 
     @Test
     public void updateCarePlan_updatesFrequency_multipleDays_keepsSatisfiedUntil() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -912,7 +892,7 @@ public class CarePlanServiceTest {
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, threshold);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
 
         Questionnaire questionnaire = new Questionnaire();
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
@@ -922,14 +902,14 @@ public class CarePlanServiceTest {
         FhirLookupResult carePlanResult = FhirLookupResult.fromResources(carePlan, patient, planDefinition);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
 
-        PatientModel patientModel = buildPatientModel(PATIENT_ID_1);
+        PatientModel patientModel = buildPatientModel();
         var orgId = "";
         Mockito.when(fhirMapper.mapPatient(patient, orgId)).thenReturn(patientModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, planDefinitionIds, questionnaireIds);
+        CarePlanModel carePlanModel = buildCarePlanModel(planDefinitionIds, questionnaireIds);
         carePlanModel.setPatient(patientModel);
-        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult,ORGANISATION_ID_1)).thenReturn(carePlanModel);
+        Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME.minus(1, ChronoUnit.HOURS).plus(2, ChronoUnit.DAYS));
 
@@ -937,20 +917,20 @@ public class CarePlanServiceTest {
         Map<String, FrequencyModel> frequencies = Map.of(QUESTIONNAIRE_ID_1, buildFrequencyModel(List.of(Weekday.TUE, Weekday.THU), "11:00"));
         FrequencyEnumerator fe = new FrequencyEnumerator(frequencies.get(QUESTIONNAIRE_ID_1));
         Instant nextNextSatisfiedUntilTime = fe.getSatisfiedUntilForFrequencyChange(POINT_IN_TIME);
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),carePlanId)).thenReturn(FhirLookupResult.fromResources());
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-        // Act
+
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
 
-        // Assert
-        assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().get(0).getSatisfiedUntil());
+
+        assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().getFirst().getSatisfiedUntil());
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getSatisfiedUntil());
     }
 
     @Test
     void updateCarePlan_removeQuestionnaire_withExeededDeadline_throwsError() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_2);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_2);
@@ -963,7 +943,7 @@ public class CarePlanServiceTest {
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_2, threshold);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
 
         Questionnaire questionnaire = new Questionnaire();
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
@@ -975,18 +955,18 @@ public class CarePlanServiceTest {
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME.plusSeconds(1L));
 
-        // Act
+
         try {
             subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
             fail("No error was thrown");
-        } catch (ServiceException e){
+        } catch (ServiceException e) {
             assertEquals(ErrorDetails.PLANDEFINITION_CONTAINS_QUESTIONNAIRE_WITH_MISSING_SCHEDULED_QUESTIONNAIRERESPONSES, e.getErrorDetails());
         }
     }
 
     @Test
     void updateCarePlan_removeQuestionnaire_withUnansweredQuestionnaireResponses_throwsError() throws Exception {
-        // Arrange
+
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_2);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_2);
@@ -999,7 +979,7 @@ public class CarePlanServiceTest {
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_2, threshold);
-        Mockito.when(fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
+        Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
 
         Questionnaire questionnaire = new Questionnaire();
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
@@ -1013,46 +993,43 @@ public class CarePlanServiceTest {
 
         QuestionnaireResponse questionnaireResponse = new QuestionnaireResponse();
         questionnaireResponse.setQuestionnaire(QUESTIONNAIRE_ID_1); // unanswered response for questionnaire that is removed
-        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED),carePlanId)).thenReturn(FhirLookupResult.fromResources(questionnaireResponse));
+        Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources(questionnaireResponse));
 
-        // Act
+
         try {
             subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
             fail("No error was thrown");
-        } catch (ServiceException e){
+        } catch (ServiceException e) {
             assertEquals(ErrorDetails.PLANDEFINITION_CONTAINS_QUESTIONNAIRE_WITH_UNHANDLED_QUESTIONNAIRERESPONSES, e.getErrorDetails());
         }
     }
 
 
-
-
-
-    private CarePlanModel buildCarePlanModel(String cpr) {
-        return buildCarePlanModel(cpr, null, null);
+    private CarePlanModel buildCarePlanModel() {
+        return buildCarePlanModel(null, null);
     }
 
-    private CarePlanModel buildCarePlanModel(String cpr, List<String> planDefinitionIds, List<String> questionnaireIds) {
+    private CarePlanModel buildCarePlanModel(List<String> planDefinitionIds, List<String> questionnaireIds) {
         CarePlanModel carePlanModel = new CarePlanModel();
 
         carePlanModel.setPatient(new PatientModel());
         carePlanModel.getPatient().setCpr(CPR_1);
         carePlanModel.setPlanDefinitions(List.of());
-        if(planDefinitionIds != null) {
-            carePlanModel.setPlanDefinitions(planDefinitionIds.stream().map(id -> buildPlanDefinitionModel(id)).collect(Collectors.toList()));
+        if (planDefinitionIds != null) {
+            carePlanModel.setPlanDefinitions(planDefinitionIds.stream().map(this::buildPlanDefinitionModel).toList());
         }
         carePlanModel.setQuestionnaires(List.of());
-        if(questionnaireIds != null) {
-            carePlanModel.setQuestionnaires(questionnaireIds.stream().map(id -> buildQuestionnaireWrapperModel(id)).collect(Collectors.toList()));
+        if (questionnaireIds != null) {
+            carePlanModel.setQuestionnaires(questionnaireIds.stream().map(this::buildQuestionnaireWrapperModel).toList());
         }
 
         return carePlanModel;
     }
 
-    private PatientModel buildPatientModel(String patientId) {
+    private PatientModel buildPatientModel() {
         PatientModel patientModel = new PatientModel();
 
-        patientModel.setId(new QualifiedId(patientId));
+        patientModel.setId(new QualifiedId(CarePlanServiceTest.PATIENT_ID_1));
         patientModel.setContactDetails(this.buildContactDetails());
         patientModel.setPrimaryContact(this.buildPrimaryContact());
 
@@ -1070,11 +1047,7 @@ public class CarePlanServiceTest {
     }
 
     private ContactDetailsModel buildContactDetails() {
-        var details = new ContactDetailsModel();
-
-        // set details...
-
-        return details;
+        return new ContactDetailsModel();
     }
 
     private PatientModel buildPatientModel(String patientId, String givenName, String familyName) {
@@ -1135,7 +1108,7 @@ public class CarePlanServiceTest {
         carePlan.setId(carePlanId);
         carePlan.setSubject(new Reference(patientId));
 
-        if(questionnaireId != null) {
+        if (questionnaireId != null) {
             CarePlan.CarePlanActivityDetailComponent detail = new CarePlan.CarePlanActivityDetailComponent();
             detail.setInstantiatesCanonical(List.of(new CanonicalType(questionnaireId)));
             detail.setScheduled(new Timing());
@@ -1179,7 +1152,7 @@ public class CarePlanServiceTest {
         return patient;
     }
 
-    private Reference buildReference(){
+    private Reference buildReference() {
         var reference = new Reference();
         reference.setReference("infektionsmedicinsk");
         return reference;
@@ -1189,8 +1162,8 @@ public class CarePlanServiceTest {
         Patient patient = buildPatient(patientId, cpr);
 
         patient.getNameFirstRep()
-            .setGiven(List.of(new StringType(givenName)))
-            .setFamily(familyName);
+                .setGiven(List.of(new StringType(givenName)))
+                .setFamily(familyName);
 
         return patient;
     }
